# pdf-inspector-integration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY.md  deny.toml  detect-results.json  file-sizes.json  ocr-evaluation.md
.github/workflows/: ci.yml
crates/pdf-inspector-mcp/: Cargo.toml
crates/pdf-inspector-mcp/src/: main.rs
crates/pdf-inspector-skillkit/: Cargo.toml
crates/pdf-inspector-skillkit/examples/: validate_domain.rs
crates/pdf-inspector-skillkit/src/: lib.rs
crates/pdf-inspector-skillkit/src/domain/: irc.rs  mod.rs  sec.rs  tax.rs
crates/pdf-inspector-skillkit/tests/: integration_tests.rs
docs/: HANDOFF.md  SPEC.md  assessment.md  corpus-analysis-irc.md  frameworks.md
scripts/: build-scanned-corpus.py  ocr-bench.py
test-corpus/ground-truth/: sample-1.txt  sample-2.txt  sample-3.txt  sample-4.txt  sample-5.txt
test-corpus/results/: summary.json
test-corpus/source/: sample-4.README.txt  sample-5.README.txt
