[package]
name = "pdf-inspector-mcp"
version = "0.1.0"
edition = "2021"
publish = false
description = "MCP server exposing pdf-inspector tools to coding agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jimthetaxguy/pdf-inspector-integration"
homepage = "https://github.com/Jimthetaxguy/pdf-inspector-integration"
readme = "../../README.md"
keywords = ["pdf", "mcp", "tax", "sec", "extraction"]
categories = ["text-processing", "command-line-utilities"]

[[bin]]
name = "pdf-inspector-mcp"
path = "src/main.rs"

[dependencies]
pdf-inspector-skillkit = { path = "../pdf-inspector-skillkit" }
rmcp = { version = "1.4", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
